--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
                 <hr class="my-5" />
 
                 <!--Section: Content-->
-                <section class="text-center">
+                <section id="work" class="text-center">
                     <h4 class="mb-5">
-                        <strong>Facilis consequatur eligendi</strong>
+                        <strong>#2 - My works</strong>
                     </h4>
 
                     <div class="row">
@@ -311,134 +311,65 @@
                 <hr class="my-5" />
 
                 <!--Section: Content-->
-                <section class="mb-5">
+                <section id="contact" class="mb-5">
                     <h4 class="mb-5 text-center">
-                        <strong>Facilis consequatur eligendi</strong>
+                        <strong>#3 - Contact me</strong>
                     </h4>
 
                     <div class="row d-flex justify-content-center">
                         <div class="col-md-6">
-                            <form>
-                                <!-- 2 column grid layout with text inputs for the first and last names -->
-                                <div class="row mb-4">
-                                    <div class="col">
-                                        <div class="form-outline">
-                                            <input
-                                                type="text"
-                                                id="form3Example1"
-                                                class="form-control"
-                                            />
-                                            <label
-                                                class="form-label"
-                                                for="form3Example1"
-                                                >First name</label
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="col">
-                                        <div class="form-outline">
-                                            <input
-                                                type="text"
-                                                id="form3Example2"
-                                                class="form-control"
-                                            />
-                                            <label
-                                                class="form-label"
-                                                for="form3Example2"
-                                                >Last name</label
-                                            >
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Email input -->
-                                <div class="form-outline mb-4">
-                                    <input
-                                        type="email"
-                                        id="form3Example3"
-                                        class="form-control"
-                                    />
-                                    <label
-                                        class="form-label"
-                                        for="form3Example3"
-                                        >Email address</label
-                                    >
-                                </div>
-
-                                <!-- Password input -->
-                                <div class="form-outline mb-4">
-                                    <input
-                                        type="password"
-                                        id="form3Example4"
-                                        class="form-control"
-                                    />
-                                    <label
-                                        class="form-label"
-                                        for="form3Example4"
-                                        >Password</label
-                                    >
-                                </div>
-
-                                <!-- Checkbox -->
-                                <div
-                                    class="form-check d-flex justify-content-center mb-4"
+                            <div class="py-4 text-center">
+                                <a
+                                    role="button"
+                                    class="btn btn-primary btn-lg m-2"
+                                    href="#CV"
+                                    rel="nofollow"
+                                    target="_blank"
                                 >
-                                    <input
-                                        class="form-check-input me-2"
-                                        type="checkbox"
-                                        value=""
-                                        id="form2Example3"
-                                        checked
-                                    />
-                                    <label
-                                        class="form-check-label"
-                                        for="form2Example3"
-                                    >
-                                        Subscribe to our newsletter
-                                    </label>
-                                </div>
-
-                                <!-- Submit button -->
-                                <button
-                                    type="submit"
-                                    class="btn btn-primary btn-block mb-4"
-                                >
-                                    Sign up
-                                </button>
-
-                                <!-- Register buttons -->
-                                <div class="text-center">
-                                    <p>or sign up with:</p>
-                                    <button
-                                        type="button"
-                                        class="btn btn-primary btn-floating mx-1"
-                                    >
-                                        <i class="fab fa-facebook-f"></i>
-                                    </button>
-
-                                    <button
-                                        type="button"
-                                        class="btn btn-primary btn-floating mx-1"
-                                    >
-                                        <i class="fab fa-google"></i>
-                                    </button>
-
-                                    <button
-                                        type="button"
-                                        class="btn btn-primary btn-floating mx-1"
-                                    >
-                                        <i class="fab fa-twitter"></i>
-                                    </button>
-
-                                    <button
-                                        type="button"
-                                        class="btn btn-primary btn-floating mx-1"
-                                    >
-                                        <i class="fab fa-github"></i>
-                                    </button>
-                                </div>
-                            </form>
+                                    Download my CV
+                                </a>
+                            </div>
                         </div>
+                    </div>
+
+                    <div class="text-center py-4 align-items-center">
+                        <p>Follow me on social media</p>
+                        <a
+                            href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA"
+                            class="btn btn-primary m-1"
+                            role="button"
+                            rel="nofollow"
+                            target="_blank"
+                        >
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                        <a
+                            href="https://www.facebook.com/mdbootstrap"
+                            class="btn btn-primary m-1"
+                            role="button"
+                            rel="nofollow"
+                            target="_blank"
+                        >
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a
+                            href="https://twitter.com/MDBootstrap"
+                            class="btn btn-primary m-1"
+                            role="button"
+                            rel="nofollow"
+                            target="_blank"
+                        >
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a
+                            href="https://github.com/mdbootstrap/mdb-ui-kit"
+                            class="btn btn-primary m-1"
+                            role="button"
+                            rel="nofollow"
+                            target="_blank"
+                        >
+                            <i class="fab fa-github"></i>
+                        </a>
                     </div>
                 </section>
                 <!--Section: Content-->
@@ -448,76 +379,16 @@
 
         <!--Footer-->
         <footer class="bg-light text-lg-start">
-            <div class="py-4 text-center">
-                <a
-                    role="button"
-                    class="btn btn-primary btn-lg m-2"
-                    href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA"
-                    rel="nofollow"
-                    target="_blank"
-                >
-                    Learn Bootstrap 5
-                </a>
-                <a
-                    role="button"
-                    class="btn btn-primary btn-lg m-2"
-                    href="https://mdbootstrap.com/docs/standard/"
-                    target="_blank"
-                >
-                    Download MDB UI KIT
-                </a>
-            </div>
-
-            <hr class="m-0" />
-
-            <div class="text-center py-4 align-items-center">
-                <p>Follow MDB on social media</p>
-                <a
-                    href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA"
-                    class="btn btn-primary m-1"
-                    role="button"
-                    rel="nofollow"
-                    target="_blank"
-                >
-                    <i class="fab fa-youtube"></i>
-                </a>
-                <a
-                    href="https://www.facebook.com/mdbootstrap"
-                    class="btn btn-primary m-1"
-                    role="button"
-                    rel="nofollow"
-                    target="_blank"
-                >
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a
-                    href="https://twitter.com/MDBootstrap"
-                    class="btn btn-primary m-1"
-                    role="button"
-                    rel="nofollow"
-                    target="_blank"
-                >
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a
-                    href="https://github.com/mdbootstrap/mdb-ui-kit"
-                    class="btn btn-primary m-1"
-                    role="button"
-                    rel="nofollow"
-                    target="_blank"
-                >
-                    <i class="fab fa-github"></i>
-                </a>
-            </div>
-
             <!-- Copyright -->
             <div
                 class="text-center p-3"
                 style="background-color: rgba(0, 0, 0, 0.2)"
             >
-                © 2020 Copyright:
-                <a class="text-dark" href="https://mdbootstrap.com/"
-                    >MDBootstrap.com</a
+                Made using
+                <a
+                    class="text-dark"
+                    href="https://getbootstrap.com/docs/5.0/getting-started/introduction/"
+                    >Bootstrap v5.0</a
                 >
             </div>
             <!-- Copyright -->
